Changed main logo design and link styling for non existent favorites page

--- a/app/assets/stylesheets/favorite.css.scss
+++ b/app/assets/stylesheets/favorite.css.scss
@@ -12,6 +12,10 @@
   position: relative;
   margin-top: 50%;
   text-align: center;
+  a {
+    color: darkorange;
+    text-decoration: none;
+  }
 }
 
 .error-icon {
