--- a/app/views/events/_events.html.erb
+++ b/app/views/events/_events.html.erb
@@ -3,7 +3,7 @@
 <% if is_fav && @info.empty? %>
   <p class="error">
     <span class="error-icon">!</span>
-    You don't have any events saved yet. Please select events of interest to you.
+    You don't have any events saved yet. Please select <a href="/events">events</a> of interest to you.
   </p>
 <% end %>
 
