--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <div id="welcomeBackground">
   <div class="overlay">
     <div class="welcomeLogo">
+      Networking <br>Events <br>that <br>You <br>Can't <br>Afford <br>to Miss
     </div>         
 
 	<!-- Sign Up Button -->
@@ -9,7 +10,7 @@
 </div> 
 
 <script>
-  $(document).ready(function(){
+  $(window).load(function(){
     var mobileViewAlert = function(){
       if (screen.width > 768){
         alert("AccessFuel is best viewed on your phone!");
