--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -30,7 +30,7 @@ body {
   }
   @media only screen and (max-width: 540px) {
     #welcomeBackground {
-      background-position-x: -135px;
+      background-position-x: -50px;
     }
   }
 
@@ -55,19 +55,15 @@ body {
   }
 
   .welcomeLogo {
-    margin: 0 auto;
-    background-image: url('Logo_final.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    width: 80%;
-    min-width: 200px;
-    height: auto;
-    min-height: 100px;
-    position: absolute;
-    bottom: 20%;
-    left: 0;
-    right: 0;
+    font-size: 32px;
+    color: white;
+    margin: 10%;
+    text-align: center;
+    font-weight: 300;
+    @media only screen and (max-width: 768px) {
+      font-size: 300%;
+      text-align: left;
+    }
   }
 
   .discover{
