--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -56,6 +56,26 @@
 				<!-- </div> --><!-- column -->
 			<!-- </div> -->
 		</div>
+
+		<div class="ad">
+		  <div class="photo">
+				<img src="http://k1tlyw8hd1j7htu3kdoo7u6c.wpengine.netdna-cdn.com/losangeles/files/2014/07/smw-los-angeles.png">
+		  </div>
+		  <div class="date">
+		    <span class="month">
+		      SEPT<br>
+		    </span>
+		    22-26
+		  </div>
+		  <div class="location">
+		  Sponsored by <i class="fa fa-windows"></i> Microsoft 
+		    <br>
+		    Los Angeles, CA
+		    <br>
+		   <a href="http://socialmediaweek.org/losangeles/" target="new"><button class="btn btn-info">Register Now</button></a>
+		  </div>
+		</div>
+
 		<div id="filtered_events">
 			<%= render "events/events" %>
 		</div>
