--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -59,8 +59,9 @@
 
 		<div class="ad">
 		  <div class="photo">
-				<!-- <img src="http://k1tlyw8hd1j7htu3kdoo7u6c.wpengine.netdna-cdn.com/losangeles/files/2014/07/smw-los-angeles.png"> -->
-				<!-- <img src="http://www.payitforwardlabs.com/public/admin/piflabslogo.png"> -->
+				<div class="pif-contain">
+					<%= image_tag "piflabslogo.png" %>
+				</div>
 		  </div>
 		  <div class="date">
 		    <span class="month">
