styled pay it forward l labs sponsored post

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -36,7 +36,7 @@ body.events-page {
         height: 110px;
         width: 110px;
         border-radius: 50%;
-        background-color: white;
+        background-color: #e6e6e6;
         margin: 0 auto;
       }
       img { 
