Removed sponsored event listing.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -57,10 +57,10 @@
 			<!-- </div> -->
 		</div>
 
-		<div class="ad">
+		<!-- <div class="ad">
 		  <div class="photo">
 				<div class="pif-contain">
-					<%= image_tag "piflabslogo.png" %>
+					<%#= image_tag "piflabslogo.png" %>
 				</div>
 		  </div>
 		  <div class="date">
@@ -76,7 +76,7 @@
 		    <br>
 		   <a href="http://www.accessfuel.com/events/990"><button class="btn btn-info">Register Now</button></a>
 		  </div>
-		</div>
+		</div> -->
 
 		<div id="filtered_events">
 			<%= render "events/events" %>
