Update ad for innovate pasadena.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -57,26 +57,26 @@
 			<!-- </div> -->
 		</div>
 
-		<!-- <div class="ad">
+		<div class="ad">
 		  <div class="photo">
 				<div class="pif-contain">
-					<%#= image_tag "piflabslogo.png" %>
+					<%= image_tag "http://connectpasadena.com/images/connect-logo.png" %>
 				</div>
 		  </div>
 		  <div class="date">
 		    <span class="month">
-		      SEPT<br>
+		      OCT<br>
 		    </span>
-		    29
+		    20-26
 		  </div>
 		  <div class="location">
-		  Sponsored by Pay It Forward Labs
+		  Innovate Pasadena
 		    <br>
-		    Santa Monica, CA
+		    Pasadena, CA
 		    <br>
-		   <a href="http://www.accessfuel.com/events/990"><button class="btn btn-info">Register Now</button></a>
+		   <a href="http://connectpasadena.com/"><button class="btn btn-info">Register Now</button></a>
 		  </div>
-		</div> -->
+		</div>
 
 		<div id="filtered_events">
 			<%= render "events/events" %>
