--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -12,7 +12,8 @@ body.events-page {
       width: 100%;
       // background-image: url('http://k1tlyw8hd1j7htu3kdoo7u6c.wpengine.netdna-cdn.com/losangeles/files/2014/06/header-los-angeles1.jpg');
       // background-image: url('http://payitforwardlabs.com/public/admin/txt%20logo%20landing.png');
-      background-image: url('http://www.foxeventi.eu/wp-content/uploads/2014/04/blurred-city-lights-wallpapers_42828_1920x1200.jpg');
+      // background-image: url('http://www.foxeventi.eu/wp-content/uploads/2014/04/blurred-city-lights-wallpapers_42828_1920x1200.jpg');
+      background-image: url('http://connectpasadena.com/images/banner.jpg');
       background-repeat: no-repeat;
       background-size: cover;
       background-position: 23% 50%;
