update add css styles.

--- a/app/assets/stylesheets/_events.css.scss
+++ b/app/assets/stylesheets/_events.css.scss
@@ -45,6 +45,9 @@ body.events-page {
         margin-top: 20px; 
         margin-left: 18px;
       }
+      @media screen and (max-width:540px) {
+        img { height: 45px; }
+      }
     }
 
     .date {
