update ad url to accessfuel internal link.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -74,7 +74,7 @@
 		    <br>
 		    Pasadena, CA
 		    <br>
-		   <a href="http://connectpasadena.com/"><button class="btn btn-info">Register Now</button></a>
+		   <a href="http://www.accessfuel.com/events/1208"><button class="btn btn-info">Register Now</button></a>
 		  </div>
 		</div>
 
