--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -46,9 +46,9 @@
     <div class="hamburger-bar"></div>
   </button>
   <div class="logo">
-    <%= link_to(events_path) do %>
-      <%= image_tag("Icon_final.png", :class => "navbar-logo") %>
-    <% end %>
+    <%#= link_to(events_path) do %>
+      <%#= image_tag("Icon_final.png", :class => "navbar-logo") %>
+    <%# end %>
   </div>
   <span class="page-title"><%= @title || "AccessFuel" %></span>
 </header>
