--- a/app/views/events/_show_nav.html.erb
+++ b/app/views/events/_show_nav.html.erb
@@ -1,9 +1,9 @@
 <header class="mobile-helper-bar">
   <a href="/events" class="back-button"></a>
   <div class="logo">
-    <%= link_to(events_path) do %>
-      <%= image_tag("Icon_final.png", :class => "navbar-logo") %>
-    <% end %>
+    <%#= link_to(events_path) do %>
+      <%#= image_tag("Icon_final.png", :class => "navbar-logo") %>
+    <%# end %>
   </div>
   <span class="page-title">Event Details</span>
 </header>
