Remove sponsored ad.

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -57,7 +57,7 @@
 			<!-- </div> -->
 		</div>
 
-		<div class="ad">
+<!-- 		<div class="ad">
 		  <div class="photo">
 				<div class="pif-contain">
 					<%= image_tag "http://connectpasadena.com/images/connect-logo.png" %>
@@ -76,7 +76,7 @@
 		    <br>
 		   <a href="http://www.accessfuel.com/events/1208"><button class="btn btn-info">Register Now</button></a>
 		  </div>
-		</div>
+		</div> -->
 
 		<div id="filtered_events">
 			<%= render "events/events" %>
